2007-09-26  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-contact-factory.c: Fix capabilities update, the NOT
	operator is ~ and not !

2007-09-26  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-profile-chooser.c:
	* libempathy-gtk/empathy-main-window.c: Fix warning when sort criterium
	is NULL and when there is no profile. Fixes bug #479786
	(Christian Persch, Xavier Claessens).

2007-09-21  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-log-manager.c: Ignore log files that don't have a
	good filename. Fixes bug #462046 (Michael Scherer).
	* configure.ac: Bump GLIB version to 2.14.0.

2007-09-21  Xavier Claessens  <xclaesse@gmail.com>

	* doc/libempathy-gtk/Makefile.am: Explicitely use libempathy from
	builddir. Fixes bug #478558 (Frederic Peters).

2007-09-21  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-chat.c: Move TP_CHANNEL_CHAT_STATE_PAUSED to
	the not typing case. Fixes bug #474603 (Cosimo Cecchi).

2007-09-21  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-status-icon.c: Tooltip for subscription request
	shouldn't display "Message:" if the message is empty. Fixes bug #459538
	(Cosimo Cecchi).
	Do not update tooltip each time the icon change.

2007-09-21  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-chat-window.c: Do not set "new message" in
	the title of conversation windows, it's useless. Fixes bug #459523.

2007-09-21  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-tp-contact-list.c: Fix warnings when finalizing.

	* tests/contact-manager.c:
	* tests/Makefile.am:
	* configure.ac:
	* Makefile.am: Add a test program to track leaks.

2007-09-21  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-list-view.c: Fix ref count error for
	account objects.

	* libempathy/empathy-contact-manager.c: Disconnect signals from
	MissionControl object when finalising the contact manager.

	* configure.ac: